# My_random_stuff

./: .gitignore  DBAD_license_with_hash.txt  LICENSE  README.md  lolcow_node-red.sh
bash_scripts/: lolcow_node-red.sh  opencv_install.sh  yocto_chromium_setup.sh
licenses_as_file/: DBAD_license_with_slash_star.txt
other_stuff/: .tmux.conf  CMakeLists.txt  Holy_sheet_makers_of_c_cpp_are_genious.txt  PandasPlotify.py  check_dependencies.py  cjson_test.cpp  control_testing.cpp  curses-menubase.py  curses-practice.py  curses_test.cpp  gnuplot-iostream.h  json_test.cpp  linux_input_practice.cpp  linux_list_drivers.py  linux_shmem_test.cpp  ncurses_form.cpp  noise_reduce.py  pre-commit  some_configs.json  tmux.conf
